# HomeAssistantWindowsAgent

./: .gitignore  CLAUDE.md  README.md  run-dev.bat  signing.pfx
Backend/: Cargo.toml
Backend/src/: auth.rs  close.rs  database.rs  handlers.rs  init.rs  launcher.rs  main.rs  middleware.rs  system.rs  ws.rs
Backend/src/actions/: automation.rs  close.rs  discord.rs  launcher.rs  mod.rs  openrgb_manager.rs  rgb.rs  scanner.rs  youtube_music.rs
Backend/src/actions/rgb/: client.rs  mod.rs  parser.rs  protocol.rs  rgb_bridge.py
Backend/src/api/: handlers.rs
Backend/src/core/: auth.rs  database.rs  init.rs  mod.rs
Backend/src/monitoring/: dashboard.rs  mod.rs  system.rs  ws.rs
Frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
Frontend/electron/: main.cjs  main.js  preload.cjs
Frontend/src/: App.tsx  LoginPage.tsx  SetupWizard.tsx  api.ts  types.ts
Frontend/src/components/: Sidebar.tsx
Frontend/src/components/sections/: AppsSection.tsx  AutomationSection.tsx  ControlSection.tsx  DashboardSection.tsx  DiscordSection.tsx  HistorySection.tsx  RgbSection.tsx  UsersSection.tsx
Frontend/src/data/: games.ts
Frontend/src/hooks/: useFavorites.ts  useWebSocket.ts
Scanner/: import_to_db.py  programs.json  scan_programs.ps1
