[package]
name = "Backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "process", "signal"] }
sysinfo = "0.30"
wmi = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["std"] }
async-trait = "0.1"
nvml-wrapper = "0.10"
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
reqwest = { version = "0.12", features = ["json"] }
zip = "2"
